# paintplayground

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README  README.md  bacon.toml  board_manager_cache.rs  build.rs  client.sh  docker-compose.yml  push_to_dockerhub.sh  push_to_registry.sh  run_from_docker.sh  server.sh
.cargo/: config.toml
app/: Cargo.toml
app/js/: bundled.js  stuff.js
app/src/: main.rs
examples/: client.rs  compres_chunks.rs
js/: canvas.js  cell.js  color.js  grid.js  manager.js  utils.js  ws.js
migrations/: 20240831215242_starting.sql
public/: canvas.js  index.html  random.html  stuff.js
server/: Dockerfile
server/examples/: client.rs
server/src/: chunk_db.rs  compression.rs  main.rs  screenshot.rs  ws.rs
server/src/tests/: test.rs
shared_lib/: Cargo.toml
shared_lib/src/: lib.rs
src/: board_manager.rs  chunk_db.rs  chunk_manager.rs  client.rs  lib.rs  main.rs  manager.rs  router.rs  screenshot.rs  types.rs  ws.rs
src/db/: db.rs  mod.rs  users.rs
src/tests/: client.rs  integration_test.rs  mod.rs  test.rs
src/utils/: jwt.rs  password.rs
