[package]
name = "paintplayground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }

tokio = { version = "1.39.2", features = ["full"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = { version = "0.7.5", features = ["macros", "ws"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }

tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
console-subscriber = "0.4.0"
