[package]
name = "paintplayground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

# [[bin]]
# name = "client"
# path = "src/client.rs"

[dependencies]
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }

tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
# console-subscriber = "0.4.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = { version = "0.7.5", features = ["macros", "ws"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }

tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = [
    "fs",
    "trace",
    "compression-gzip",
] }

serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"

rand = "0.8.5"

mimalloc = "0.1.43"
# jemallocator = "0.5.4"
# moka = { version = "0.12.8", features = ["future"] }
dashmap = "6.0.1"
image = "0.25.5"
png = "0.17.14"

[dev-dependencies]
reqwest = "0.12.5"
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
tungstenite = "0.23.0"
futures = "0.3"
lz4_flex = "0.11.3"
